[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Tilesets/dungeondoor.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/Objects/ExitRoomDoor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 161, 32.25 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="DoorSprite" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="DoorAreaBottom" type="Area2D" parent="."]
position = Vector2( 0, 192 )

[node name="BottomCollision" type="CollisionShape2D" parent="DoorAreaBottom"]
position = Vector2( 160, 96 )
shape = SubResource( 1 )

[node name="DoorAreaTop" type="Area2D" parent="."]

[node name="TopCollision" type="CollisionShape2D" parent="DoorAreaTop"]
position = Vector2( 160, -32 )
shape = SubResource( 1 )

[connection signal="body_entered" from="DoorAreaBottom" to="." method="_on_DoorAreaBottom_body_entered"]
[connection signal="body_exited" from="DoorAreaBottom" to="." method="_on_DoorAreaBottom_body_exited"]
[connection signal="body_entered" from="DoorAreaTop" to="." method="_on_DoorAreaTop_body_entered"]
[connection signal="body_exited" from="DoorAreaTop" to="." method="_on_DoorAreaTop_body_exited"]
